syntax = "proto3";

package topos.shared.v1;

message CertificateId {
  bytes value = 1;
}
